feat: modernize to Spring Boot 3.4.3, Java 21, and migrate database to PostgreSQL